--- a/northcoders/frontend/games-project/src/index.css
+++ b/northcoders/frontend/games-project/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+.Item_img{
+  margin: 15px 0;
+  height: auto;
+  width: 80%;
+  max-width: vw;
+}
