--- a/northcoders/frontend/games-project/src/App.css
+++ b/northcoders/frontend/games-project/src/App.css
@@ -14,6 +14,19 @@ body{
   text-align: center;
 }
 
+.Nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.Nav li{
+  display: inline;
+  text-align:center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
 
 
 @media (prefers-reduced-motion: no-preference) {
@@ -33,6 +46,18 @@ body{
   display:flex;
   flex-wrap:wrap;
   justify-content:space-evenly;
+}
+
+.ReviewCard {
+  border: solid;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-bottom: 10%;
+}
+
+.Item_img {
+  height: 50%;
+  width: 50%;
 }
 
 .App-link {
